<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Student Cashbook</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_login">Student Cashbook</string>
    <string name="title_activity_einnahme">Einmalige Einnahme</string>
    <string name="title_activity_ausgabe">Einmalige Ausgabe</string>
    <string name="title_activity_kategorien">Kategorien</string>
    <string name="title_activity_monat_einnahme">Monatl. Einnahmen</string>
    <string name="title_activity_monat_ausgabe">Monatl. Ausgaben</string>
    <string name="title_activity_sparziel">Sparziele</string>
    <string name="title_activity_neues_sparziel">Neues Sparziel</string>
    <string name="title_activity_einstellungen">Einstellungen</string>
    <string name="Anlegen">✔</string>
    <string name="Anmelden">Anmelden</string>
    <string name="Anmerkung">Anmerkung</string>
    <string name="Ausgabe_hin">Monatliche Ausgabe\nhinzufügen</string>
    <string name="Sparziel_hin">Sparziel\nhinzufügen</string>
    <string name="Benutzername">Benutzername</string>
    <string name="Logo">Logo</string>
    <string name="Geld">Geld</string>
    <string name="Betrag">€</string>
    <string name="Passwort">Passwort</string>
    <string name="Einnahme">Einnahme</string>
    <string name="Einnahme_hin">Monatliche Einnahme\nhinzufügen</string>
    <string name="Ausgabe">Ausgabe</string>
    <string name="LetzteAusgaben">Letzte Ausgaben</string>
    <string name="Euro">€</string>
    <string name="Datum">Datum</string>
    <string name="SparzielDefinieren">Neues Sparziel definieren</string>
    <string name="Titel">Titel</string>
    <string name="faellig">fällig am</string>
    <string name="date">dd.mm.yyyy</string>
    <string name="uebrig">spare, was monatlich übrig bleibt</string>
    <string name="fest">festen monatlichen Betrag sparen</string>
    <string name="Sparbetrag"> 350 €</string>
    <string name="Uhrzeit">Uhrzeit</string>
    <string name="OrangeRectangle">OrangeRectangle</string>
    <string name="NeuerBenutzer">Neu hier?</string>
    <string name="title_activity_neuer_nutzer">NeuerNutzerActivity</string>
    <string name="BenutzerAnlegen">Neuen Benutzer anlegen</string>
    <string name="AnlegenButton_neuerNutzer">Anmelden</string>
    <string name="PswdZurueck">Paswort vergessen?</string>
    <string name="title_activity_base">BaseActivity</string>
    <string name="title_activity_main">Übersicht</string>
    <string name="PasswortWdh_edit_neuerNutzer">Passwort wiederholen</string>
    <string name="login">Login</string>
    <string name="signup">Sign up</string>
    <string name="spinnerKategorie">Wähle Kategorie aus</string>
    <string name="abbrechen_button">Abbrechen</string>
    <string name="neuerName">Name</string>
    <string name="editText_neuesBudget">monatliches Budget (Optional)</string>
    <string name="action_newK">Neue Kategorie</string>
    <string name="title_activity_neue_kategorie">NeueKategorieActivity</string>
    <string name="neueKategorie">Neue Kategorie</string>
    <string name="kategorieUebersicht">Deine Kategorien</string>
    <string name="LetzteTransaktionen">Letzte Transaktionen:</string>
    <string name="action_newE">Neue Einnahme</string>
    <string name="action_newA">Neue Ausgabe</string>
    <string name="title_activity_monatliches">Monatliches</string>
    <string name="action_MonE">Neue monatliche Einnahme</string>
    <string name="action_MonA">Neue monatliche Ausgabe</string>
    <string name="neuesMon">Neue hinzufügen</string>
    <string name="sparzieleUebersicht">Deine Sparziele</string>
    <string name="action_add_sparziel">Neues Sparziel</string>
    <string name="title_activity_splash_screen">Student Cashbook</string>
    <string name="splashScreen">sponsored by</string>
    <string name="splashScreenSponsor">Hier könnte\ndein Logo sein!</string>
    <string name="action_newTipp">Neuer Spartipp</string>
    <string name="einstellungenUebersicht">Deine Einstellungen</string>
    <string name="pref_summary_tipps_auto">Tipps automatisch nach neuer Ausgabe anzeigen</string>
    <string name="pref_summary_sprache_change">Sprache ändern (Derzeit nicht möglich)</string>
    <string name="pref_tipps_einstellungen_title">Tipps</string>
    <string name="pref_title_tipps_auto">Automatiches Anzeigen nach Ausgabe</string>
    <string name="pref_sprache_einstellungen_title">Sprache</string>
    <string name="pref_title_sprache_change">Deutsch</string>
    <string name="pref_passwort_einstellungen_title">Passwort</string>
    <string name="pref_summary_passwort_change">Passwort ändern</string>
    <string name="pref_title_passwort_change">Ändern</string>
    <string name="secureFrage">Der Name deines ersten Haustiers?</string>
    <string name="eingabe_secureFrage">Name</string>
    <string name="neuesPassword">Gib dein neues Passwort ein:</string>
    <string name="title_activity_password_zurueck">Passwort zurücksetzen</string>
    <string name="pref_summary_tipps_notifications">Erhalte regelmäßige Tipps-Benachrichtigungen</string>
    <string name="pref_title_tipps_notifications">Benachrichtigungen</string>
    <string name="title_activity_test">Test</string>
    <string name="widgetTitle">Letzten Transaktionen:</string>
    <string name="monat_title">Neu</string>
    <string name="monat_tag_hint">Tag</string>

</resources>
