  <PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="wrap_content"
     android:id="@+id/einstellungen_layout">

   <PreferenceCategory 
       android:title="@string/pref_tipps_einstellungen_title"
       android:key="pref_key_tipps_einstellungen">
       <CheckBoxPreference
           android:key="pref_key_tipps_auto"
           android:summary="@string/pref_summary_tipps_auto"
           android:title="@string/pref_title_tipps_auto"
           android:defaultValue="true" />
        <CheckBoxPreference
           android:key="pref_key_tipps_notifications"
           android:summary="@string/pref_summary_tipps_notifications"
           android:title="@string/pref_title_tipps_notifications"
           android:defaultValue="true" />
   </PreferenceCategory>
   
   
   <PreferenceCategory 
       android:title="@string/pref_sprache_einstellungen_title"
       android:key="pref_key_sprache_einstellungen">
    <Preference 
            android:key="pref_key_sprache_change"
            android:summary="@string/pref_summary_sprache_change"
            android:title="@string/pref_title_sprache_change"
            android:clickable="false" />
   </PreferenceCategory>
   
   <PreferenceCategory 
       android:title="@string/pref_passwort_einstellungen_title"
       android:key="pref_key_passwort_einstellungen">
    <Preference 
            android:key="pref_key_passwort_change"
            android:summary="@string/pref_summary_passwort_change"
            android:title="@string/pref_title_passwort_change"
            android:clickable="true" />
   </PreferenceCategory>
	   
</PreferenceScreen>
   
   


