<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="300sp"
    android:layout_height="wrap_content"
    android:background="#f0f0f0"
    android:layout_alignParentTop="true"
    android:layout_centerHorizontal="true"
    android:id="@+id/alert_passwordNeu">

     <TextView
        android:id="@+id/secureFrage"
        android:layout_width="270sp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/neuesPassword"
        android:fontFamily="sans-serif"
        android:textSize="20sp"
        android:layout_marginLeft="15dp"
        android:textAppearance="?android:attr/textAppearanceMedium" />
    <EditText
        android:id="@+id/passwordNeu_Eingabe"
        android:inputType="textPassword"
        android:layout_width="280sp"
        android:layout_height="50dp"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="10dp"
		android:background="#ffffff"
        android:ems="10"
        android:textColor="#000000"
        android:gravity="center"
        android:fontFamily="sans-serif"
        android:hint="@string/Passwort"/>
    <EditText
        android:id="@+id/passwordNeu_EingabeWdh"
        android:inputType="textPassword"
        android:layout_width="280sp"
        android:layout_height="50dp"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="10dp"
		android:background="#ffffff"
        android:ems="10"
        android:textColor="#000000"
        android:gravity="center"
        android:fontFamily="sans-serif"
        android:hint="@string/PasswortWdh_edit_neuerNutzer"/>

    <Button
        android:id="@+id/button_neuesPasswordSetzen"
        style="@style/Main_button_text"
        android:layout_width="280dp"
        android:layout_height="50dp"
        android:layout_marginTop="28sp"
        android:layout_marginLeft="10dp"
        android:layout_marginBottom="10dp"
        android:background="@drawable/styledbutton2"
        android:clickable="true"
        android:fontFamily="sans-serif-thin"
        android:onClick="neuesPasswordSetzen"
        android:text="@string/Anlegen"
        android:textColor="#000000"  />

</LinearLayout>
