<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#84c185"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".NeuerNutzerActivity" >

    <ImageView
        android:id="@+id/imageView1"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="34dp"
        android:contentDescription="@string/Logo"
        android:src="@drawable/ic_launcher" />

    <EditText
        android:id="@+id/neuesPasswortEingabe"
        android:layout_width="300dp"
        android:layout_height="40dp"
        android:layout_below="@+id/imageView1"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="90dp"
        android:background="#ffffff"
        android:ems="10"
        android:gravity="center"
        android:hint="@string/Passwort"
        android:inputType="textPassword" />

    <EditText
        android:id="@+id/passwortWdh"
        android:layout_width="300dp"
        android:layout_height="40dp"
        android:layout_below="@+id/neuesPasswortEingabe"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:background="#ffffff"
        android:ems="10"
        android:gravity="center"
        android:hint="@string/PasswortWdh_edit_neuerNutzer"
        android:inputType="textPassword" />

    <Button
        android:id="@+id/anlegen"
        android:layout_width="300dp"
        android:layout_height="40dp"
        android:layout_below="@+id/passwortWdh"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="30dp"
        android:background="#ff9100"
        android:clickable="true"
        android:fontFamily="Tahoma"
        android:onClick="BenutzerNeuAnlegen"
        android:text="@string/AnlegenButton_neuerNutzer" />

</RelativeLayout>