<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#84c185"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".LoginActivity" >

    <ImageView
        android:id="@+id/imageView1"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:contentDescription="@string/Logo"
        android:src="@drawable/ic_launcher" />

    <TextView
        android:id="@+id/Willkommen"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/imageView1"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="17dp"
        android:fontFamily="Tahoma"
        android:text="@string/Willkommen"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/Anmeldung"
        android:layout_below="@+id/Willkommen"
        android:layout_marginTop="22dp"
        android:fontFamily="Tahoma"
        android:text="@string/Benutzername"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <EditText
        android:id="@+id/Benutzername"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/Anmeldung"
        android:layout_below="@+id/textView1"
        android:background="@drawable/roundededittext"
        android:ems="10"
        android:inputType="text"
        android:gravity="center" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/Anmeldung"
        android:layout_below="@+id/Benutzername"
        android:text="@string/Passwort"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <EditText
        android:id="@+id/Passwort"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/Anmeldung"
        android:background="@drawable/roundededittext"
        android:layout_below="@+id/textView2"
        android:gravity="center"
        android:ems="10"
        android:inputType="textPassword" />

    <Button
        android:id="@+id/Anmeldung"
        android:layout_width="200dp"
        android:layout_height="30dp"
        android:layout_below="@+id/Passwort"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="56dp"
        android:background="@drawable/roundedbutton"
        android:fontFamily="Tahoma"
        android:text="@string/Anmelden" 
        android:clickable="true"
        android:onClick="buttonPressed"/>

    <Button
        android:id="@+id/neuerBenutzer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/Anmeldung"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="34dp"
        android:text="@string/NeuerBenutzer"
        android:clickable="true"
        android:onClick="BenutzerAnlegen"
        android:fontFamily="Tahoma"
        android:textAppearance="?android:attr/textAppearanceSmall" />

    <Button
        android:id="@+id/Pswdzuruecksetzen"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/Anmeldung"
        android:layout_marginTop="75dp"
        android:layout_centerHorizontal="true"
        android:clickable="true"
        android:fontFamily="Tahoma"
        android:onClick="PasswortZuruecksetzen"
        android:text="@string/PswdZurueck" />

</RelativeLayout>