<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="300sp"
    android:layout_height="300sp"
    android:background="#f0f0f0"
    android:layout_alignParentTop="true"
    android:layout_centerHorizontal="true"
    android:layout_marginTop="150sp"
    android:id="@+id/alert_secureFrage">

    <TextView
        android:id="@+id/secureFrage"
        android:layout_width="250sp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/secureFrage"
        android:fontFamily="sans-serif"
        android:textSize="20sp"
        android:layout_marginLeft="25dp"
        android:textAppearance="?android:attr/textAppearanceMedium" />
    <EditText
        android:id="@+id/secureFrage_Eingabe"
        android:inputType="textPassword"
        android:layout_width="280sp"
        android:layout_height="50dp"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="10dp"
		android:background="#ffffff"
        android:ems="10"
        android:textColor="#000000"
        android:gravity="center"
        android:fontFamily="sans-serif"
        android:hint="@string/eingabe_secureFrage"/>

    <Button
        android:id="@+id/button_alertSecureFrage"
        style="@style/Main_button_text"
        android:layout_width="280dp"
        android:layout_height="50dp"
        android:layout_marginTop="28sp"
        android:layout_marginLeft="10dp"
        android:background="@drawable/styledbutton2"
        android:clickable="true"
        android:fontFamily="sans-serif-thin"
        android:onClick=""
        android:text="@string/Anlegen"
        android:textColor="#000000"  />

</LinearLayout>