<android.support.v4.widget.DrawerLayout 
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/drawer_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fontFamily="sans-serif-thin" >
    
    <!-- The main content view -->
    <FrameLayout
        android:id="@+id/content_frame"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
         android:background="#3C8DC5" >

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent" >

            <TextView
                android:id="@+id/textView_Datum"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_alignRight="@+id/editText_Anmerkungen"
                android:layout_marginRight="5sp"
                android:layout_marginTop="15sp"
                android:text="@string/Datum"
                android:textColor="#ffffff" 
                android:fontFamily="sans-serif-thin"
                android:gravity = "right"/>
            
            <TextView
                android:id="@+id/textView_Uhrzeit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignRight ="@+id/textView_Datum"
                android:layout_below="@+id/textView_Datum"
                android:layout_marginTop="5sp"
                android:textColor="#ffffff"
                android:fontFamily="sans-serif-thin"
                android:text="@string/Uhrzeit"
                android:gravity = "right" />
            
            <Spinner
                android:id="@+id/DropDown_Kategorien"
                android:layout_width="match_parent"
                android:layout_height="50sp"
                android:layout_below="@+id/textView_Uhrzeit"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="15dp"
                android:layout_marginLeft="25sp"
        		android:layout_marginRight="25sp"
                android:gravity="center" />
            
            
             <EditText
                 android:id="@+id/editText_Eingabe"
                 android:layout_width="match_parent"
                 android:layout_height="50sp"
                 android:layout_alignTop="@+id/DropDown_Kategorien"
                 android:layout_marginTop="80sp"
				 android:layout_centerHorizontal="true"
				 android:layout_marginLeft="25sp"
        		 android:layout_marginRight="25sp"
                 android:background="#ffffff"
                 android:fontFamily="sans-serif-thin"
                 android:ems="10"
                 android:gravity="center"
                 android:inputType="numberDecimal"
                 android:hint="@string/Betrag" >

                <requestFocus />
            </EditText>


            <EditText
                android:id="@+id/editText_Anmerkungen"
                android:layout_width="match_parent"
                android:layout_height="80sp"
                android:layout_below="@+id/editText_Eingabe"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="35sp"
                android:layout_marginLeft="25sp"
        		android:layout_marginRight="25sp"
                android:background="#ffffff"
                android:fontFamily="sans-serif-thin"
                android:ems="10"
                android:gravity="top"
                android:hint="@string/Anmerkung"
                android:inputType="textMultiLine" />

            <Button
                android:id="@+id/button_ausgabeAbbrechen"
                android:layout_width="120sp"
                android:layout_height="wrap_content"
                android:layout_below="@+id/editText_Anmerkungen"
                android:layout_alignParentLeft="true"
                android:background="@drawable/styledbutton2"
                android:fontFamily="sans-serif"
                android:layout_marginLeft="25sp"
                android:layout_marginTop="20sp"
                android:onClick="abbrechen"
                android:text="@string/abbrechen_button"
                android:textColor="#000000" />

            <Button
                android:id="@+id/Anlegen"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_toRightOf="@+id/button_ausgabeAbbrechen"
                android:layout_alignRight="@+id/editText_Anmerkungen"
                android:layout_below="@+id/editText_Anmerkungen"
                android:layout_marginTop="20dp"
                android:background="@drawable/styledbutton2"
                android:clickable="true"
                android:fontFamily="sans-serif"
                android:onClick="addAusgabe"
                android:layout_marginLeft="10sp"
                android:text="@string/Anlegen"
                android:textColor="#000000" />
            
        </RelativeLayout>

    </FrameLayout>
    
    
    <!-- The navigation drawer -->
    <ListView android:id="@+id/left_drawer"
        android:layout_width="240dp"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        android:choiceMode="singleChoice"
        android:divider="@android:color/transparent"
        android:dividerHeight="0dp"
        android:background="#04031A"/>
</android.support.v4.widget.DrawerLayout>
   


