<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".EinnahmeActivity"
    android:background="#84c185" >
    
    
    
    <EditText
        android:id="@+id/Anmerkung"
        android:layout_width="200dp"
        android:layout_height="60dp"
        android:layout_above="@+id/EinnahmeBestaetigen"
        android:layout_alignLeft="@+id/EinnahmeBestaetigen"
        android:layout_marginBottom="24dp"
        android:ems="10"
        android:hint="@string/Anmerkung"
        android:inputType="textMultiLine" 
        android:background="@drawable/roundededittext"
        android:fontFamily="Tahoma"
        android:gravity="center" />

    <Button
        android:id="@+id/EinnahmeBestaetigen"
        android:layout_width="200dp"
        android:layout_height="30dp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="42dp"
        android:background="@drawable/roundedbutton" />

    <EditText
        android:id="@+id/Betrag"
        android:layout_width="100dp"
        android:layout_height="30dp"
        android:layout_alignRight="@+id/Anmerkung"
        android:layout_centerVertical="true"
        android:background="@drawable/roundededittext"
        android:ems="10"
        android:fontFamily="Tahoma"
        android:gravity="center"
        android:hint="0.00"
        android:inputType="numberDecimal" >

        <requestFocus />
    </EditText>

    <Spinner
        android:id="@+id/KategorieSpinner"
        android:layout_width="200dp"
        android:layout_height="50dp"
        android:layout_above="@+id/Betrag"
        android:layout_alignRight="@+id/Betrag"
        android:layout_marginBottom="37dp"
        android:background="@drawable/roundededittext"
        android:gravity="center" />

    <TextView
        android:id="@+id/Datum"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignRight="@+id/KategorieSpinner"
        android:layout_marginTop="56dp"
        android:fontFamily="Tahoma"
        android:text="@string/Datum"
        android:textAppearance="?android:attr/textAppearanceSmall" />

    <TextView
        android:id="@+id/Uhrzeit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/Datum"
        android:layout_below="@+id/Datum"
        android:fontFamily="Tahoma"
        android:text="@string/Uhrzeit"
        android:textAppearance="?android:attr/textAppearanceSmall" />

</RelativeLayout>
